[gd_scene load_steps=11 format=3 uid="uid://bu8ql60gnhsad"]

[ext_resource type="Script" uid="uid://bue551sw22h6u" path="res://ui/hud.gd" id="1_5nt5s"]
[ext_resource type="Texture2D" uid="uid://dk7kexs0ssyii" path="res://Sprite/coin-removebg-preview.png" id="2_4nxdm"]
[ext_resource type="Texture2D" uid="uid://bnc1d23waxkth" path="res://Sprite/4874329-red-heart-vector-line-for-web-presentation-logo-icon-symbol-gratuit-vectoriel-removebg-preview.png" id="4_pgw44"]
[ext_resource type="Texture2D" uid="uid://bpljadse7l2fm" path="res://Sprite/New Tower/Turrets_g2.png" id="4_yx4hk"]
[ext_resource type="Texture2D" uid="uid://0x02fxs4iccg" path="res://scene/Barrack/_Untitled_design-removebg-preview.png" id="4_yxe7t"]
[ext_resource type="Texture2D" uid="uid://b06sbfyfa2yi8" path="res://scene/Snipe_tower/Turrets_g9.png" id="5_yx4hk"]
[ext_resource type="Texture2D" uid="uid://cf583wphcy202" path="res://Sprite/New Tower/Turrets_g21.png" id="6_ldol0"]
[ext_resource type="Texture2D" uid="uid://ksgxl42jbp0x" path="res://icon.svg" id="7_0qwpj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldol0"]
bg_color = Color(0.289058, 0.679883, 0.586034, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.926194, 0.81268, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
shadow_size = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx4hk"]
bg_color = Color(0.431256, 0.570265, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.473169, 0.860408, 0.997757, 1)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
shadow_size = 9

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_5nt5s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 896.0
offset_bottom = 152.0

[node name="GoldLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "10"

[node name="CoinIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_4nxdm")
expand_mode = 2

[node name="HealthLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="HeartIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_pgw44")
expand_mode = 2

[node name="Label4" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Barrack
50 PO "

[node name="BuildBarracksBtn" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(160, 64)
layout_mode = 2
texture_normal = ExtResource("4_yxe7t")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Gunner 
Tower 
100 PO "

[node name="BuildBlueBtn" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_yx4hk")
ignore_texture_size = true
stretch_mode = 4

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Snipe 
Tower
200 PO"

[node name="BuildSnipeBtn" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("5_yx4hk")
ignore_texture_size = true
stretch_mode = 4

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Missile
Tower
300 PO"

[node name="BuildMissileBtn" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture_normal = ExtResource("6_ldol0")
ignore_texture_size = true
stretch_mode = 4

[node name="TimerLabel" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="NextWaveBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ldol0")
theme_override_styles/normal = SubResource("StyleBoxFlat_yx4hk")
disabled = true
text = "Prochaine vague"

[node name="BottomBar" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -152.0
grow_vertical = 0

[node name="FreezeBtn" type="TextureButton" parent="BottomBar"]
layout_mode = 2
texture_normal = ExtResource("7_0qwpj")
stretch_mode = 4

[node name="Label" type="Label" parent="BottomBar/FreezeBtn"]
layout_mode = 0
offset_left = 39.0
offset_top = -23.0
offset_right = 79.0

[node name="HealBtn" type="TextureButton" parent="BottomBar"]
layout_mode = 2
texture_normal = ExtResource("7_0qwpj")

[node name="Label" type="Label" parent="BottomBar/HealBtn"]
layout_mode = 0
offset_left = 40.0
offset_top = -28.0
offset_right = 80.0
offset_bottom = -5.0

[node name="SummonBtn" type="TextureButton" parent="BottomBar"]
layout_mode = 2
texture_normal = ExtResource("7_0qwpj")

[node name="Label" type="Label" parent="BottomBar/SummonBtn"]
layout_mode = 0
offset_left = 40.0
offset_top = -27.0
offset_right = 80.0
offset_bottom = -4.0
